<resources>
    <string name="app_name">Rss-Msrcedes Beta</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="stories">Stories</string>
    <string name="video">Video</string>
    <string name="favourites">Favourites</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="date">item_date</string>
    <string name="link">item_link</string>
    <string name="name">item_name</string>
</resources>
